zishao-410-develop-oracle-2-0531

--- a/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/14.use-the-database-connection-pool-of-mysql-mode/6.dbcp-connection-pool-example-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/14.use-the-database-connection-pool-of-mysql-mode/6.dbcp-connection-pool-example-of-mysql-mode.md
@@ -7,9 +7,9 @@ This topic provides a configuration example of a DBCP connection pool.
 ```xml
 <dependencies>
     <dependency>
-        <groupId>com.oceanbase</groupId>
-        <artifactId>oceanbase-client</artifactId>
-        <version>2.4.0</version>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>8.0.25</version>
     </dependency>
     <dependency>
         <groupId>org.apache.commons</groupId>
@@ -40,9 +40,9 @@ Content of the `dbcp.properties` configuration file:
 
 ```perl
 #Driver name
-driverClassName=com.alipay.oceanbase.jdbc.Driver
+driverClassName=com.mysql.cj.jdbc.Driver
 #url
-url=jdbc:oceanbase://10.xx.xxx.xxx:18817/test?useSSL=false&useServerPrepStmts=true&serverTimezone=UTC
+url=jdbc:mysql://10.xx.xxx.xxx:18817/test?useSSL=false&useServerPrepStmts=true&serverTimezone=UTC
 #Username
 username=axxxx@oracle
 #Password
@@ -142,9 +142,9 @@ public class DBConn {
     //Obtain a database connection
     public static Connection getConnection() {
         try {
-            Class.forName("com.alipay.oceanbase.jdbc.Driver");
-            DriverManager.registerDriver(new com.alipay.oceanbase.jdbc.Driver());
-            String dbUrl = "jdbc:oceanbase://10.100.xxx.xxx:18817/test?useSSL=false&useServerPrepStmts=true&serverTimezone=UTC";
+            Class.forName("mysql.cj.jdbc.Driver");
+            DriverManager.registerDriver(new mysql.cj.jdbc.Driver());
+            String dbUrl = "jdbc:mysql://10.100.xxx.xxx:18817/test?useSSL=false&useServerPrepStmts=true&serverTimezone=UTC";
             conn = DriverManager.getConnection(dbUrl, "admin@oracle", "admin");
 //            System.out.println("========Database connected========");
         } catch (Exception e) {
