--- a/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/9.connect-to-the-oceanbase-database-through-spring-batch-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/9.connect-to-the-oceanbase-database-through-spring-batch-of-mysql-mode.md
@@ -19,9 +19,9 @@ This topic provides a Spring Batch connection example.
   </dependency>
   <!--Database driver-->
   <dependency>
-   <groupId>com.alipay.oceanbase</groupId>
-   <artifactId>oceanbase-client</artifactId>
-   <version>3.2.3</version>
+   <groupId>mysql</groupId>
+   <artifactId>mysql-connector-java</artifactId>
+   <version>8.0.25</version>
   </dependency>
   <!--Connection pool-->
   <dependency>
@@ -44,11 +44,11 @@ This topic provides a Spring Batch connection example.
 # yml file:
 spring:
   datasource:
-    url: jdbc:oceanbase://10.100.xxx.xxx:18815/test
-    driver-class-name: com.alipay.oceanbase.jdbc.Driver
+    url: jdbc:mysql://10.100.xxx.xxx:18815/test
+    driver-class-name: com.mysql.cj.jdbc.Driver
 #    username: admin@mysql
     username: admin@oracle
-    password: admin
+    password: ******
   jpa:
     hibernate:
       ddl-auto: update
