--- a/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/11.query-timeout-variables-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/11.query-timeout-variables-of-oracle-mode.md
@@ -42,6 +42,7 @@ obclient> SELECT /*+ QUERY_TIMEOUT(100000000) */ COUNT(*) FROM h1, h2 , h3;
 1 row in set
 ```
 
-> **Note**
->
-> The setting takes effect only for the current SQL statement. 
+  <main id="notice" type='explain'>
+    <h4>Note</h4>
+    <p>The setting takes effect only for the current SQL statement.</p>
+  </main>
