--- a/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/5.group-query-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/5.group-query-of-oracle-mode.md
@@ -2,7 +2,7 @@
 
 The ORDER BY clause sorts query results by one or multiple attribute columns in ascending or descending order. The query results are sorted in ascending order by default. 
 
-## Syntax:
+## Syntax
 
 `GROUP BY` supports grouping by a single field or multiple fields. You can also use the `WHERE` clause to filter data before grouping, use the `HAVING` clause to filter data after grouping, and use the `ORDER BY` clause to sort data after grouping. Syntax for the GROUP BY clause:
 
@@ -66,13 +66,13 @@ Query the number of orders placed by each customer and print the customer ID and
 
 ```sql
 obclient> SELECT user_id Customer ID, COUNT(order_id) Number of orders FROM fruit_order GROUP BY user_id;
-+----------+--------------+
-| Customer ID   | Number of orders     |
-+----------+--------------+
-|     1011 |            3 |
-|     1022 |            4 |
-|     1033 |            2 |
-+----------+--------------+
++------------+-----------------+
+| Customer ID| Number of orders|
++------------+-----------------+
+|       1011 |               3 |
+|       1022 |               4 |
+|       1033 |               2 |
++------------+-----------------+
 3 rows in set
 ```
 
@@ -82,19 +82,19 @@ Query the number of orders placed by each customer each year and print the custo
 
 ```sql
 obclient> SELECT user_id Customer ID, order_year Year of order placement, COUNT(order_id) Number of orders FROM fruit_order GROUP BY user_id,order_year;
-+----------+--------------+--------------+
-| Customer ID   | Year of order placement     | Number of orders     |
-+----------+--------------+--------------+
-|     1011 | 01-JAN-19    |            1 |
-|     1011 | 01-JAN-20    |            1 |
-|     1011 | 02-FEB-20    |            1 |
-|     1022 | 02-FEB-19    |            1 |
-|     1022 | 03-MAR-19    |            1 |
-|     1022 | 03-MAR-21    |            1 |
-|     1022 | 04-APR-21    |            1 |
-|     1033 | 05-MAY-20    |            1 |
-|     1033 | 06-JUN-21    |            1 |
-+----------+--------------+--------------+
++------------+------------------------+-----------------+
+| Customer ID| Year of order placement| Number of orders|
++------------+------------------------+-----------------+
+|       1011 |           01-JAN-19    |               1 |
+|       1011 |           01-JAN-20    |               1 |
+|       1011 |           02-FEB-20    |               1 |
+|       1022 |           02-FEB-19    |               1 |
+|       1022 |           03-MAR-19    |               1 |
+|       1022 |           03-MAR-21    |               1 |
+|       1022 |           04-APR-21    |               1 |
+|       1033 |           05-MAY-20    |               1 |
+|       1033 |           06-JUN-21    |               1 |
++------------+------------------------+-----------------+
 9 rows in set
 ```
 
@@ -104,25 +104,25 @@ Query the number of orders placed by each customer in 2020 and print the custome
 
 ```sql
 obclient> SELECT user_id Customer ID, COUNT(order_id) Number of orders FROM fruit_order t WHERE t.order_year = '01-JAN-20' GROUP BY user_id;
-+----------+--------------+
-| Customer ID   | Number of orders     |
-+----------+--------------+
-|     1011 |            1 |
-+----------+--------------+
++------------+-----------------+
+| Customer ID| Number of orders|
++------------+-----------------+
+|       1011 |               1 |
++------------+-----------------+
 1 row in set
 ```
 
 ### Filter data after grouping
 
-Query customers who placed two or more orders in 2019 and print the customer IDs and the numbers of orders. 
+Query customers who placed one or more orders in 2019 and print the customer IDs and the numbers of orders. 
 
 ```sql
 obclient> SELECT user_id Customer ID, COUNT(order_id) Number of orders FROM fruit_order t WHERE t.order_year = '01-JAN-19' GROUP BY user_id HAVING COUNT(order_id)>=1;
-+----------+--------------+
-| Customer ID   | Number of orders     |
-+----------+--------------+
-|     1011 |            1 |
-+----------+--------------+
++------------+-----------------+
+| Customer ID| Number of orders|
++------------+-----------------+
+|       1011 |               1 |
++------------+-----------------+
 1 row in set
 ```
 
@@ -132,12 +132,12 @@ Query the maximum order amount of each customer and print the customer IDs and m
 
 ```sql
 obclient> SELECT user_id Customer ID, MAX(fruit_price) Maximum order amount FROM fruit_order t GROUP BY user_id ORDER BY Maximum order amount DESC;
-+----------+--------------+
-| Customer ID   | Maximum order amount     |
-+----------+--------------+
-|     1033 |        63.66 |
-|     1011 |        58.83 |
-|     1022 |        34.44 |
-+----------+--------------+
++------------+---------------------+
+| Customer ID| Maximum order amount|
++------------+---------------------+
+|       1033 |               63.66 |
+|       1011 |               58.83 |
+|       1022 |               34.44 |
++------------+---------------------+
 3 rows in set
 ```
