--- a/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/6.use-row-Limiting-clause-in-query-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/6.use-row-Limiting-clause-in-query-of-oracle-mode.md
@@ -2,7 +2,7 @@
 
 You can use `Row_Limiting_Clause` to limit the number of rows returned for a `SELECT` query. This feature is often used in pagination. 
 
-## Syntax of Row_Limiting_Clause
+## Syntax
 
 Syntax of SQL queries that include `Row_Limiting_Clause`:
 
@@ -107,7 +107,7 @@ unpivot_in_clause:
 
 ### Parameters
 
-| Field | Description |
+| Parameter | Description |
 |----------|-----------------------|
 | hint_options | Optional. The hint option.  |
 | DISTINCT \| UNIQUE \| ALL | The returned data may contain duplicate rows. <ul><li>If you specify `DISTINCT` or `UNIQUE`, rows are deduplicated in the query results. `DISTINCT` and `UNIQUE` are synonyms. </li><li> If you specify `ALL`, all rows are returned in the query results. The default value is `ALL`.    </li></ul> |
@@ -136,7 +136,7 @@ unpivot_in_clause:
 | expr | The expression whose calculation results are constant values.  `pivot_in_clause` supports only constant expressions.  |
 | unpivot_clause | Pivots a column to a row.  |
 
-## Examples of queries with Row_Limiting_Clause
+## Examples
 
 ### Query data after the Nth row
 
@@ -209,7 +209,7 @@ obclient> SELECT id, name,num FROM tb ORDER BY num
 1 row in set
 ```
 
-### Query the first 30% of data with the minimum num values and all other data records same as the last data row obtained in the preceding example.
+### Query the first 30% of data with the minimum num values and all other data records same as the last data row obtained in the preceding example
 
 ```sql
 obclient>  SELECT id, name,num FROM tb ORDER BY num FETCH FIRST 30 PERCENT ROWS WITH TIES;
