--- a/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/7.multi-table-join-query-of-oracle-mode/1.inner-join-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/7.multi-table-join-query-of-oracle-mode/1.inner-join-of-oracle-mode.md
@@ -92,7 +92,7 @@ Create a table, and insert proper data into the table. Query the data with join 
 
 ### Examples of queries without join conditions
 
-Based on the tables and data created in the preceding example, use a query without join conditions to obtain data of the `id` and `name` columns whose id column values are the same in the `tbl1` and `tbl2` tables. 
+Based on the tables and data created in the preceding example, use a query without join conditions to obtain data of the `id` and `name` columns whose `id` column values are the same in the `tbl1` and `tbl2` tables. 
 
 ```sql
 obclient [SYS]> SELECT tbl1.id, tbl1.name, tbl2.id, tbl2.name FROM tbl1 INNER JOIN tbl2;
