--- a/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/7.multi-table-join-query-of-oracle-mode/4.right-join-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/7.multi-table-join-query-of-oracle-mode/4.right-join-of-oracle-mode.md
@@ -8,7 +8,7 @@ An OUTER JOIN query uses a comparison operator to compare the data in two tables
 
 OUTER JOIN queries include FULL JOIN queries, LEFT JOIN queries, and RIGHT JOIN queries. An outer join returns all the rows that meet the join conditions. In addition, it returns unused rows of one table and fills `NULL` in the corresponding positions from the other table. 
 
-This topic describes how to use RIGHT JOIN queries. For more information about FULL JOIN queries and LEFT JOIN queries, see [FULL JOIN queries](2.full-join.md) and [LEFT JOIN queries](3.left-join.md). 
+This topic describes how to use RIGHT JOIN queries. For more information about FULL JOIN queries and LEFT JOIN queries, see [FULL JOIN queries](2.full-join-of-oracle-mode.md) and [LEFT JOIN queries](3.left-join-of-oracle-mode.md). 
 
 ## Syntax
 
@@ -85,7 +85,7 @@ obclient> SELECT tbl_a.id, tbl_a.name, tbl_b.num, tbl_b.value FROM tbl_a RIGHT J
 
 ### RIGHT JOIN query with a WHERE clause to filter results
 
-You can use a RIGHT JOIN query to obtain the join result and then use the WHERE clause to filter the result. 
+You can use a RIGHT JOIN query to obtain the join result and then use the `WHERE` clause to filter the result. 
 
 Example 2: Execute a RIGHT JOIN query on the `tbl_a` and `tbl_b` tables and return the data that meets the `value=1003` condition in the `tbl_b` table. 
 
@@ -107,8 +107,8 @@ obclient> SELECT t1.id, t1.name, t2.id, t2.name FROM t1
 
 ## Related topics
 
-* [INNER JOIN queries](1.inner-join.md)
+* [INNER JOIN queries](1.inner-join-of-oracle-mode.md)
 
-* [FULL JOIN queries](2.full-join.md)
+* [FULL JOIN queries](2.full-join-of-oracle-mode.md)
 
-* [LEFT JOIN queries](3.left-join.md)
+* [LEFT JOIN queries](3.left-join-of-oracle-mode.md)
