--- a/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/7.multi-table-join-query-of-oracle-mode/5.subquery-of-oracle-mode-develop.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/7.multi-table-join-query-of-oracle-mode/5.subquery-of-oracle-mode-develop.md
@@ -39,7 +39,7 @@ Subqueries can contain the following keywords: `IN`, `ANY`, `SOME`, and `ALL`.
 
 * The `ALL` keyword can be used with operators such as `=`, `>`, `>=`, `<`, `<=`, and `<>` to specify values that are equal to, greater than, greater than or equal to, less than, less than or equal to, or not equal to all the specified data.
 
-<main id="notice" type='notice'>
+  <main id="notice" type='notice'>
     <h4>Notice</h4>
     <p>If the <code>NOT IN</code> keyword is used, and the column value in a subquery is <code>NULL</code>, the result of the outer query is empty. </p>
   </main>
@@ -134,16 +134,16 @@ Create tables named `emp_ny`, `dept_ny`, and `job_grades_ny`, and insert data to
 
    ```shell
    obclient> SELECT a.*,(SELECT count(*) FROM emp_ny b WHERE b.deptno = a.deptno) AS Number of employees FROM dept_ny a;
-   +--------+----------------+-----------+--------------+
-   | DEPTNO | DNAME          | LOCATION  | Number of employees     |
-   +--------+----------------+-----------+--------------+
-   |     20 | Finance        | beijing   |            1 |
-   |     25 | Legal affairs  | shanghai  |            1 |
-   |     30 | Workshop       | guangzhou |            1 |
-   |     35 | Administration | hangzhou  |            1 |
-   |     40 | Development    | xian      |            1 |
-   |     45 | Office         | suzhou    |            1 |
-   +--------+----------------+-----------+--------------+
+   +--------+----------------+-----------+--------------------+
+   | DEPTNO | DNAME          | LOCATION  | Number of employees|
+   +--------+----------------+-----------+--------------------+
+   |     20 | Finance        | beijing   |                  1 |
+   |     25 | Legal affairs  | shanghai  |                  1 |
+   |     30 | Workshop       | guangzhou |                  1 |
+   |     35 | Administration | hangzhou  |                  1 |
+   |     40 | Development    | xian      |                  1 |
+   |     45 | Office         | suzhou    |                  1 |
+   +--------+----------------+-----------+--------------------+
    6 rows in set
    ```
 
@@ -151,16 +151,16 @@ Create tables named `emp_ny`, `dept_ny`, and `job_grades_ny`, and insert data to
 
    ```shell
    obclient> SELECT (SELECT a.dname FROM dept_ny a, emp_ny b WHERE a.deptno = b.deptno AND b.empno = 1566) AS Department name FROM emp_ny b;
-   +--------------+
-   | Department name     |
-   +--------------+
-   | Development  |
-   | Development  |
-   | Development  |
-   | Development  |
-   | Development  |
-   | Development  |
-   +--------------+
+   +----------------+
+   | Department name|
+   +----------------+
+   |   Development  |
+   |   Development  |
+   |   Development  |
+   |   Development  |
+   |   Development  |
+   |   Development  |
+   +----------------+
    6 rows in set
    ```
 
@@ -192,7 +192,7 @@ Create tables named `emp_ny`, `dept_ny`, and `job_grades_ny`, and insert data to
             WHERE sal < ALL
             (SELECT DISTINCT sal FROM emp_ny WHERE job = 'MANAGER') AND job!= 'MANAGER';
    +--------------+--------------+----------+--------+
-   | Employee name     | Employee ID     | Job title     | Salary    |
+   | Employee name| Employee ID  | Job title| Salary |
    +--------------+--------------+----------+--------+
    | SMITH        |         1369 | CLERK    |    800 |
    | ALLEN        |         1499 | SALESMAN |   1600 |
@@ -206,7 +206,7 @@ Create tables named `emp_ny`, `dept_ny`, and `job_grades_ny`, and insert data to
    obclient> SELECT empname Employee name, empno Employee ID, job Job title, sal Salary FROM emp_ny
             WHERE sal < ALL (SELECT min(sal) FROM emp_ny WHERE job = 'MANAGER') AND job!= 'MANAGER';
    +--------------+--------------+----------+--------+
-   | Employee name     | Employee ID     | Job title     | Salary    |
+   | Employee name| Employee ID  | Job title| Salary |
    +--------------+--------------+----------+--------+
    | SMITH        |         1369 | CLERK    |    800 |
    | ALLEN        |         1499 | SALESMAN |   1600 |
@@ -299,7 +299,7 @@ obclient [USER001]> SELECT * FROM tbl1,TABLE(CAST(MULTISET(SELECT tbl2.col2 FROM
 2 rows in set
 ```
 
-## References
+## Related topics
 
 * [SELECT](../../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.select-of-oracle-mode/1.simple-select-of-oracle-mode.md)
 * [CAST](../../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/6.conversion-functions-of-oracle-mode/2.cast-of-oracle-mode.md)
