--- a/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/8.use-operators-and-functions-in-query-for-oracle-mode/1.use-arithmetic-operator-in-query-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/8.use-operators-and-functions-in-query-for-oracle-mode/1.use-arithmetic-operator-in-query-of-oracle-mode.md
@@ -4,7 +4,7 @@ Common arithmetic operators used in queries include addition (+), subtraction (-
 
 ## Examples
 
-Query the number and unit price of commodities purchased by customers who meet the specified conditions. The product of the number of commodities and the unit price is the total payment of the commodities. You can add the `t2.ol_quantity * t3.i_price` column to the `select_list` table and rename the table as `item_sum_price`. 
+Query the number and unit price of commodities purchased by customers who meet the specified conditions. The product of the number of commodities and the unit price is the total payment of the commodities. You can add `t2.ol_quantity * t3.i_price` column to the `select_list` statement and rename the table as `item_sum_price`. 
 
 1. Create the `cust` table. 
 
