--- a/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/8.use-operators-and-functions-in-query-for-oracle-mode/10.lock-query-result-select-for-update-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/8.use-operators-and-functions-in-query-for-oracle-mode/10.lock-query-result-select-for-update-of-oracle-mode.md
@@ -1,6 +1,6 @@
 # Use the SELECT FOR UPDATE statement to lock query results
 
-OceanBase Database supports multiversion concurrency control (MVCC). By default, a read transaction does not block a write transaction. You can use the SELECT FOR UPDATE statement to lock the objects of the read transaction to block the write transaction. 
+OceanBase Database supports multiversion concurrency control (MVCC). By default, a read transaction does not block a write transaction. You can use the `SELECT FOR UPDATE` statement to lock the objects of the read transaction to block the write transaction. 
 
 This topic uses examples to describe how to use the `SELECT FOR UPDATE` statement to lock query results. 
 
@@ -48,7 +48,7 @@ Use the `SELECT FOR UPDATE` statement to lock query results.
       +-----------+-------------+------------+
       | USER_NAME | FRUIT_PRICE | ORDER_DATE |
       +-----------+-------------+------------+
-      | Li Si      |       14.66 | 04-APR-21  |
+      | Li Si     |       14.66 | 04-APR-21  |
       +-----------+-------------+------------+
       1 row in set
       ```
@@ -82,7 +82,7 @@ Use the `SELECT FOR UPDATE` statement to lock query results.
    +-----------+-------------+------------+
    | USER_NAME | FRUIT_PRICE | ORDER_DATE |
    +-----------+-------------+------------+
-   | Li Si      |        16.5 | 04-APR-21  |
+   | Li Si     |        16.5 | 04-APR-21  |
    +-----------+-------------+------------+
    1 row in set
    ```
