--- a/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/8.use-operators-and-functions-in-query-for-oracle-mode/6.use-type-conversion-function-in-query-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/8.use-operators-and-functions-in-query-for-oracle-mode/6.use-type-conversion-function-in-query-of-oracle-mode.md
@@ -4,7 +4,7 @@ Type conversion functions convert one data type to another, for example, convert
 
 * Example: Convert time strings to datetime data types 
 
-   In an Oracle tenant, you can use the TO_DATE function to convert strings to datetime data types. The second argument in the TO_DATE function specifies a datetime format, which must conform to the system date format. SQL syntax:
+   In an Oracle tenant, you can use the `to_date` function to convert strings to datetime data types. The second argument in the `to_date` function specifies a datetime format, which must conform to the system date format. SQL syntax:
 
    ```javascript
    obclient> SELECT to_date('Feb 20, 2020', 'Mon dd, YYYY') t1
@@ -18,11 +18,11 @@ Type conversion functions convert one data type to another, for example, convert
    1 row in set
    ```
 
-   In an Oracle tenant, you can use the TO_CHAR function to convert datetime data types to strings. 
+   In an Oracle tenant, you can use the `to_char` function to convert datetime data types to strings. 
 
 * Example: Convert between numbers and strings 
 
-   In an Oracle tenant, you can use the TO_CHAR function to convert numbers to strings. You can use the TO_NUMBER function to convert strings to numbers. 
+   In an Oracle tenant, you can use the `to_char` function to convert numbers to strings. You can use the `to_number` function to convert strings to numbers. 
 
    ```javascript
    obclient> SELECT to_number('3.14') n1, to_number('-3.14') n2, to_char(3.14159,'99.99') c1
