--- a/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/8.use-operators-and-functions-in-query-for-oracle-mode/7.use-aggregate-function-in-query-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/8.use-operators-and-functions-in-query-for-oracle-mode/7.use-aggregate-function-in-query-of-oracle-mode.md
@@ -1,6 +1,6 @@
 # Use aggregate functions in queries
 
-An aggregate function scans a set of records and then returns a single row. This set of records can be a table or a view, or results of a subquery. For more information about the aggregate functions supported by OceanBase, see SQL Reference (Oracle Mode). 
+An aggregate function scans a set of records and then returns a single row. This set of records can be a table or a view, or results of a subquery.
 
 Aggregate functions are usually used with the GROUP BY clause to group values based on one or more columns, and return one record for each group. 
 
@@ -51,4 +51,4 @@ Gather statistics on the sales amount of toy orders.
    3 rows in set
    ```
 
-For more information about the aggregate functions supported by OceanBase Database, see **SQL Reference (Oracle Mode)**. 
+For more information about the aggregate functions supported by OceanBase Database, see **SQL reference (Oracle mode)**. 
