--- a/en-US/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/3.transaction-savepoints-of-oracle-mode/1.mark-a-savepoint-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/3.transaction-savepoints-of-oracle-mode/1.mark-a-savepoint-of-oracle-mode.md
@@ -40,6 +40,6 @@ obclient [SYS]> SAVEPOINT ca;
 Query OK, 0 rows affected
 ```
 
-## Related topics
+## Related topic
 
 * [Roll back a transaction to a savepoint](2.rollback-to-a-savepoint-of-oracle-mode.md)
