--- a/en-US/3.develop/2.application-development-of-oracle-mode/6.common-errors-and-solutions-of-oracle-mode/3.transaction-timeout-with-error-code-ora-00600-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/6.common-errors-and-solutions-of-oracle-mode/3.transaction-timeout-with-error-code-ora-00600-of-oracle-mode.md
@@ -51,15 +51,16 @@ The error codes corresponding to this error message are as follows:
 
 * Error code in OceanBase Database: 6210
 
-For more information about the error codes, see [Overview](../../../7.reference/5.system-reference/7.error-code-of-oracle-mode/1.use-error-information-of-oracle-mode.md). 
+For more information about the error codes, see [Error code overview](../../../7.reference/5.system-reference/7.error-code-of-oracle-mode/1.use-error-information-of-oracle-mode.md). 
 
 ## Possible causes
 
 The uncommitted transaction timeout indicates that the transaction remains uncommitted after the specified threshold has elapsed. If the transaction is not committed when the specified time has elapsed, the system reports an error. The uncommitted transaction timeout period is controlled by the `ob_trx_timeout` tenant variable. The default value is 86400000000 microseconds, namely 24 hours. 
 
-> **Note**
->
-> OceanBase Database provides two timeout mechanisms to prevent transactions from holding locks for a long time and affecting other sessions: idle transaction timeout and uncommitted transaction timeout. Typically, only one timeout mechanism is triggered at a time. 
+  <main id="notice" type='explain'>
+    <h4>Note</h4>
+    <p>OceanBase Database provides two timeout mechanisms to prevent transactions from holding locks for a long time and affecting other sessions: idle transaction timeout and uncommitted transaction timeout. Typically, only one timeout mechanism is triggered at a time. </p>
+  </main>
 
 ## Troubleshooting procedure
 
@@ -69,9 +70,10 @@ Take the following steps to view and modify tenant variables, roll back the tran
 
    The uncommitted transaction timeout period is controlled by the `ob_trx_timeout` tenant variable in the unit of microseconds. We recommend that you use the default value of 86400000000 microseconds, namely 24 hours. 
 
-   > **Note**
-   >
-   > The following variable setting method takes effect only for the current session. To make the settings permanent, use the `SET GLOBAL` syntax to configure these variables, and then restart the session for the settings to take effect. 
+   <main id="notice" type='explain'>
+    <h4>Note</h4>
+    <p>The following variable setting method takes effect only for the current session. To make the settings permanent, use the <code>SET GLOBAL</code> syntax to configure these variables, and then restart the session for the settings to take effect.</p>
+   </main>
 
    ```sql
    obclient [SYS]> SHOW VARIABLES LIKE 'ob_trx_timeout';
