--- a/en-US/3.develop/2.application-development-of-oracle-mode/6.common-errors-and-solutions-of-oracle-mode/4.user-locked-with-error-code-3118-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/6.common-errors-and-solutions-of-oracle-mode/4.user-locked-with-error-code-3118-of-oracle-mode.md
@@ -4,7 +4,7 @@ This topic describes how to handle `ERROR 3118`, where a user is locked in Ocean
 
 ## Symptom
 
-If you enter an incorrect password multiple times when you log on to the `Oracle` tenant by using the `ny1` user account, the system reports an error indicating that the user is locked. 
+If you enter an incorrect password multiple times when you log on to the `Oracle` tenant by using the `ny` user account, the system reports an error indicating that the user is locked. 
 
 ```sql
 [admin@k08j13249.eu95sqa /home/admin]
@@ -23,9 +23,10 @@ Take the following steps to unlock the user and log on again.
 
 1. Log on to the tenant as the administrator. The default administrator username of an Oracle tenant is `SYS`. 
 
-   > **Note**
-   >
-   > If you log on as the administrator, you can directly unlock users. If you log on as a regular user, you must have the global `ALTER USER` privilege to unlock users. 
+   <main id="notice" type='explain'>
+     <h4>Note</h4>
+     <p>If you log on as the administrator, you can directly unlock users. If you log on as a regular user, you must have the global <code>ALTER USER</code> privilege to unlock users.</p>
+   </main>
 
    ```sql
    [admin@k08j13249.eu95sqa /home/admin]
@@ -43,7 +44,7 @@ Take the following steps to unlock the user and log on again.
 2. Unlock the `ny` user. 
 
    ```sql
-    obclient [SYS]> ALTER USER ny ACCOUNT UNLOCK ;
+   obclient [SYS]> ALTER USER ny ACCOUNT UNLOCK ;
    Query OK, 0 rows affected
    ```
 
