--- a/en-US/3.develop/2.application-development-of-oracle-mode/6.common-errors-and-solutions-of-oracle-mode/5.user-password-error-with-error-code-1045-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/6.common-errors-and-solutions-of-oracle-mode/5.user-password-error-with-error-code-1045-of-oracle-mode.md
@@ -19,9 +19,10 @@ Take the following steps to change the password for a user and log on again.
 
 1. Log on to the tenant as the administrator. The default administrator username of an Oracle tenant is `SYS`. 
 
-   > **Note**
-   >
-   > If you log on as the administrator, you can directly unlock users. If you log on as a regular user, you must have the global `ALTER USER` privilege to unlock users. 
+   <main id="notice" type='explain'>
+     <h4>Note</h4>
+     <p>If you log on as the administrator, you can directly unlock users. If you log on as a regular user, you must have the global <code>ALTER USER</code> privilege to unlock users.</p>
+   </main>
 
    ```sql
    [admin@k08j13249.eu95sqa /home/admin]
@@ -39,13 +40,13 @@ Take the following steps to change the password for a user and log on again.
 2. Change the password of the `ny` user. 
 
    ```sql
-    obclient [SYS]> ALTER USER ny IDENTIFIED BY ***3***;
+   obclient [SYS]> ALTER USER ny IDENTIFIED BY ***3***;
    Query OK, 0 rows affected
    ```
-
-   > **Note**
-   >
-   > When you set the password for a user, the password must meet the password complexity requirements of the current tenant. For more information about password complexity, see [Set password complexity rules](../../../7.reference/2.manage-guide/2.basic-database-management/4.manage-tenants-1/5.manage-users-and-permissions/2.oracle-3/2.set-password-complexity.md). 
+   <main id="notice" type='explain'>
+     <h4>Note</h4>
+     <p>When you set the password for a user, the password must meet the password complexity requirements of the current tenant. For more information about password complexity, see <a href="../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/2.set-password-complexity-of-oracle-mode.md">Set password complexity rules</a>.</p>
+   </main>
 
 3. Log on as the `ny` user again. 
 
