--- a/en-US/7.reference/4.development-reference/4.database-design-specifications-and-practices/2.object-structure-design-specification/1.field-design.md
+++ b/en-US/7.reference/4.development-reference/4.database-design-specifications-and-practices/2.object-structure-design-specification/1.field-design.md
@@ -4,7 +4,7 @@ You need to consider the field data types and lengths during field design. This 
 
 <main id="notice" type='explain'>
     <h4>Note</h4>
-    <p>In OceanBase Database 3.x, the field length multiplied by the number of fields must be less than 1.5 MB. </p>
+    <p>In OceanBase Database 3.x, the total length of all fields multiplied by the number of fields must be less than 1.5 MB, and the number of fields cannot exceed 512.</p>
   </main>
 
 ## MySQL mode
