--- a/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/11.connect-to-the-oceanbase-database-through-springjpa-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/11.connect-to-the-oceanbase-database-through-springjpa-of-mysql-mode.md
@@ -6,14 +6,14 @@ This topic provides a Spring JPA connection example and tests the performance of
 
 ```java
 <dependency>
-   <groupId>com.alipay.oceanbase</groupId>
-   <artifactId>oceanbase-client</artifactId>
-   <version>3.2.3</version>
+   <groupId>mysql</groupId>
+   <artifactId>mysql-connector-java</artifactId>
+   <version>8.0.25</version>
 </dependency>
 <dependency>
    <groupId>org.springframework.data</groupId>
    <artifactId>spring-data-jpa</artifactId>
-    <version>1.10.1.RELEASE</version>
+   <version>1.10.1.RELEASE</version>
 </dependency>
 
 
@@ -129,8 +129,8 @@ The following example shows the content of the configuration file:
 
 ```xml
 #OceanBase Database
-jdbc.driver=com.alipay.oceanbase.jdbc.Driver
-jdbc.url=jdbc:oceanbase://10.100.xxx.xxx:18815/test
+jdbc.driver=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://10.100.xxx.xxx:18815/test
 jdbc.username=admin
 jdbc.password=******
 database.dialect=MYSQL
@@ -150,9 +150,9 @@ The following example shows the content of the configuration file:
       <version>****</version>
   </dependency>
   <dependency>
-   <groupId>com.alipay.oceanbase</groupId>
-   <artifactId>oceanbase-client</artifactId>
-   <version>3.2.3</version>
+   <groupId>mysql</groupId>
+   <artifactId>mysql-connector-java</artifactId>
+   <version>8.0.25</version>
   </dependency>
   <!-- The rest is omitted. -->
 ```
@@ -162,10 +162,10 @@ The following example shows the content of the configuration file:
 Configure the data source and JPA part in the configuration file as follows:
 
 ```java
-spring.datasource.url=jdbc:oceanbase://10.100.xxx.xxx:18815/test
+spring.datasource.url=jdbc:mysql://10.100.xxx.xxx:18815/test
 spring.datasource.username=admin@oracle
 spring.datasource.password=******
-spring.datasource.driver-class-name=com.alipay.oceanbase.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
