--- a/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/14.use-the-database-connection-pool-of-mysql-mode/2.tomcat-connection-pool-configuration-example-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/14.use-the-database-connection-pool-of-mysql-mode/2.tomcat-connection-pool-configuration-example-of-mysql-mode.md
@@ -14,9 +14,9 @@ maxActive="100" //The maximum number of connections that a database can have on 
 maxIdle="30"    //The minimum number of connections that a database maintains on the server.
 maxWait="10000" //The maximum wait time. 10000 ms
 username="root"
-password=""
-driverClassName="com.oceanbase.jdbc.Driver"
-url="jdbc:oceanbase://10.100.xxx.xxx:18815/test?characterEncoding=UTF-8"/>
+password="******"
+driverClassName="com.mysql.cj.jdbc.Driver"
+url="jdbc:mysql://10.100.xxx.xxx:18815/test?characterEncoding=UTF-8"/>
 ```
 
 ## Configure the web.xml file of the project
