--- a/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/14.use-the-database-connection-pool-of-mysql-mode/3.c3p0-connection-pool-configuration-example-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/14.use-the-database-connection-pool-of-mysql-mode/3.c3p0-connection-pool-configuration-example-of-mysql-mode.md
@@ -13,9 +13,9 @@ This topic provides a configuration example of a C3P0 connection pool.
 ```
 ```plaintext
 <dependency>
-    <groupId>com.oceanbase</groupId>
-    <artifactId>oceanbase-client</artifactId>
-    <version>2.4.0</version>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.25</version>
 </dependency>
 <dependency>
     <groupId>com.mchange</groupId>
@@ -30,8 +30,8 @@ This topic provides a configuration example of a C3P0 connection pool.
 public class C3P0PoolTest {
     private static ComboPooledDataSource dataSource = new ComboPooledDataSource("oboracle");
     public void init() throws PropertyVetoException {
-        dataSource.setDriverClass("com.oceanbase.jdbc.Driver");
-        dataSource.setJdbcUrl("jdbc:oceanbase://10.100.xxx.xxx:30035/test?useSSL=false");
+        dataSource.setDriverClass("com.mysql.cj.jdbc.Driver");
+        dataSource.setJdbcUrl("jdbc:mysql://10.100.xxx.xxx:30035/test?useSSL=false");
         dataSource.setUser("test@tt3");
         dataSource.setPassword("******");
         dataSource.setInitialPoolSize(3);
