--- a/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/14.use-the-database-connection-pool-of-mysql-mode/4.proxool-connection-pool-configuration-example-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/14.use-the-database-connection-pool-of-mysql-mode/4.proxool-connection-pool-configuration-example-of-mysql-mode.md
@@ -6,9 +6,9 @@ This topic provides a configuration example of a Proxool connection pool.
 
 ```java
 <dependency>
-    <groupId>com.oceanbase</groupId>
-    <artifactId>oceanbase-client</artifactId>
-    <version>2.4.0</version>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.25</version>
 </dependency>
 <dependency>
       <groupId>proxool</groupId>
@@ -31,8 +31,8 @@ This topic provides a configuration example of a Proxool connection pool.
 
 ```unknow
 jdbc-1.proxool.alias=test
-jdbc-1.proxool.driver-class=com.oceanbase.jdbc.Driver
-jdbc-1.proxool.driver-url=jdbc:oceanbase://10.100.xxx.xxx:30035/test
+jdbc-1.proxool.driver-class=com.mysql.cj.jdbc.Driver
+jdbc-1.proxool.driver-url=jdbc:mysql://10.100.xxx.xxx:30035/test
 jdbc-1.user=test@tt3
 jdbc-1.password=******
 
