--- a/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/14.use-the-database-connection-pool-of-mysql-mode/5.hikaricp-connection-pool-configuration-example-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/14.use-the-database-connection-pool-of-mysql-mode/5.hikaricp-connection-pool-configuration-example-of-mysql-mode.md
@@ -8,9 +8,9 @@ Content of the `pom.xml` file:
 
 ```xml
 <dependency>
-    <groupId>com.oceanbase</groupId>
-    <artifactId>oceanbase-client</artifactId>
-    <version>2.4.0</version>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.25</version>
 </dependency>
 <dependency>
     <groupId>com.zaxxer</groupId>
@@ -24,7 +24,7 @@ Content of the `pom.xml` file:
 Content of the `jdbc.properties` file:
 
 ```dart
-jdbcUrl=jdbc:oceanbase://10.100.xxx.xxx:18817/test?useSSL=false&useServerPrepStmts=true&serverTimezone=UTC
+jdbcUrl=jdbc:mysql://10.100.xxx.xxx:18817/test?useSSL=false&useServerPrepStmts=true&serverTimezone=UTC
 username=admin@oracle
 password=******
 dataSource.cachePrepStmts=true
