--- a/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md
@@ -36,7 +36,7 @@ This topic describes how to connect to a MySQL tenant of OceanBase Database by u
 
       * `-P`: the port for connecting to OceanBase Database, which is also the listening port of the ODP. Default value: `2883`, which can be customized when ODP is deployed. 
 
-      * `-c`: specifies that comments must not be ignored in the runtime environment of MySQL. 
+      * `-c`: specifies that comments must not be ignored in the runtime environment of OBClient. 
 
       * `-A`: specifies not to automatically retrieve the statistical information when connecting to a MySQL tenant. 
 
@@ -70,7 +70,7 @@ This topic describes how to connect to a MySQL tenant of OceanBase Database by u
 
       * `-p`: the account password. For security reasons, you do not need to specify this parameter. In that case, you will be prompted to enter a password later. The password is invisible. 
 
-      * `-c`: specifies that comments must not be ignored in the runtime environment of MySQL. 
+      * `-c`: specifies that comments must not be ignored in the runtime environment of OBClient. 
 
       * `-A`: specifies not to automatically retrieve the statistical information when connecting to a MySQL tenant. 
 
