--- a/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/2.connect-to-an-oceanbase-tenant-by-using-obclient-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/2.connect-to-an-oceanbase-tenant-by-using-obclient-of-oracle-mode.md
@@ -38,9 +38,9 @@ This topic describes the prerequisites and procedure for connecting to an Oracle
 
       * `-P`: the port for connecting to OceanBase Database, which is also the listening port of the OBProxy. Default value: `2883`, which can be customized when OBProxy is deployed. 
 
-      * `-c`: specifies that comments must not be ignored in the runtime environment of MySQL. 
+      * `-c`: specifies that comments must not be ignored in the runtime environment of OBClient. 
 
-      * `-A`: specifies not to automatically retrieve the statistical information when connecting to a MySQL tenant. 
+      * `-A`: specifies not to automatically retrieve the statistical information when connecting to an Oracle tenant. 
 
       * `oceanbase`: the name of the database to be accessed. You can change it to a business database. 
 
@@ -72,9 +72,9 @@ This topic describes the prerequisites and procedure for connecting to an Oracle
 
       * `-p`: the account password. For security reasons, you do not need to specify this parameter. In that case, you will be prompted to enter a password later. The password is invisible. 
 
-      * `-c`: specifies that comments must not be ignored in the runtime environment of MySQL. 
+      * `-c`: specifies that comments must not be ignored in the runtime environment of OBClient. 
 
-      * `-A`: specifies not to automatically retrieve the statistical information when connecting to a MySQL tenant. 
+      * `-A`: specifies not to automatically retrieve the statistical information when connecting to an Oracle tenant. 
 
       * `oceanbase`: the name of the database to be accessed. You can change it to a business database. 
 
