--- a/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/7.multi-table-join-query-of-oracle-mode/3.left-join-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/7.multi-table-join-query-of-oracle-mode/3.left-join-of-oracle-mode.md
@@ -86,7 +86,7 @@ obclient [SYS]> SELECT tbl_a.id, tbl_a.name, tbl_b.num, tbl_b.value FROM tbl_a L
 
 ### LEFT JOIN queries with a WHERE clause
 
-You can use a LEFT JOIN query to obtain the join result and then use the WHERE clause to filter the result.
+You can use a LEFT JOIN query to obtain the join result and then use the `WHERE` clause to filter the result.
 
 ```sql
 obclient [SYS]> SELECT * FROM tbl_a;
