--- a/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/8.use-operators-and-functions-in-query-for-oracle-mode/3.use-string-connector-in-query-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/8.use-operators-and-functions-in-query-for-oracle-mode/3.use-string-connector-in-query-of-oracle-mode.md
@@ -4,7 +4,7 @@ In an Oracle tenant, `||` is used as a string concatenation operator.
 
 ## Examples
 
-1. Create a table named `if_ny`. 
+1. Create a table named `tif_ny`. 
 
    ```unknow
    obclient> CREATE TABLE tif_ny (
@@ -33,23 +33,23 @@ In an Oracle tenant, `||` is used as a string concatenation operator.
    +-----+--------+--------+-----------+
    | ID  | F_NAME | L_NAME | C_DATE    |
    +-----+--------+--------+-----------+
-   | 401 | Zhang     | San     | 11-AUG-70 |
+   | 401 | Zhang  | San    | 11-AUG-70 |
    | 402 | Li     | Si     | 11-MAY-71 |
-   | 403 | Wang     | Wu     | 11-JUL-72 |
+   | 403 | Wang   | Wu     | 11-JUL-72 |
    +-----+--------+--------+-----------+
    3 rows in set
    ```
 
-4. Use "||" as a string concatenation operator to concatenate the `f_name` and `l_name` columns in the `tif_ny` table into the `name` column. 
+4. Use `||` as a string concatenation operator to concatenate the `f_name` and `l_name` columns in the `tif_ny` table into the `name` column. 
 
    ```unknow
    obclient> SELECT f_name || ' ' || l_name name FROM tif_ny;
-   +---------+
-   | NAME    |
-   +---------+
-   | Zhang San   |
-   | Li Si   |
-   | Wang Wu   |
-   +---------+
+   +----------+
+   | NAME     |
+   +----------+
+   | Zhang San|
+   | Li Si    |
+   | Wang Wu  |
+   +----------+
    3 rows in set
    ```
