--- a/en-US/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/1.transaction-management-overview-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/1.transaction-management-overview-of-oracle-mode.md
@@ -6,7 +6,9 @@ This topic describes basic transaction information and transaction control state
 
 A database transaction is a series of database operations that are treated as a unit. The database is transformed from one consistent state to another after a transaction is executed. Generally, the SQL statements in a transaction include both DML statements and query statements. A transaction that contains only query statements is generally called a read-only transaction. 
 
-<!-- You can execute the `ROLLBACK` statement to roll back a transaction before it is committed. For more information about transactions, see [Overview of transactions](../../../7.reference/1.oceanbase-database-concepts/8.transaction-management/1.transaction/1.transaction-introduction.md).  -->
+You can execute the `ROLLBACK` statement to roll back a transaction before it is committed. 
+
+<!-- For more information about transactions, see [Overview of transactions](../../../7.reference/1.oceanbase-database-concepts/8.transaction-management/1.transaction/1.transaction-introduction.md).  -->
 
 ## Transaction control statements
 
@@ -30,15 +32,16 @@ In the CLI environment of OceanBase Client (OBClient), you can run a transaction
 
 * If you execute the `SET GLOBAL autocommit` statement to set the autocommit parameter at the tenant level, the parameter takes effect only after you close and reconnect the session. 
 
-> **Note**
->
-> If the `autocommit` variable of a session is set to `0` and no transaction is to be explicitly committed, when the program terminates abnormally, OceanBase Database automatically rolls back the last uncommitted transaction.
+  <main id="notice" type='explain'>
+    <h4>Note</h4>
+    <p>If the <code>autocommit</code> variable of a session is set to <code>0</code> and no transaction is to be explicitly committed, when the program terminates abnormally, OceanBase Database automatically rolls back the last uncommitted transaction.</p>
+  </main>
 
 ## Related topics
 
 * [Start a transaction](2.start-a-transaction-of-oracle-mode.md)
 
-* [Transaction savepoints](3.transaction-savepoints-of-oracle-mode/1.mark-a-savepoint-of-oracle-mode.md)
+* [Mark a savepoint](3.transaction-savepoints-of-oracle-mode/1.mark-a-savepoint-of-oracle-mode.md)
 
 * [Commit a transaction](4.submit-transaction-of-oracle-mode.md)
 
