--- a/en-US/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/2.start-a-transaction-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/2.start-a-transaction-of-oracle-mode.md
@@ -22,9 +22,10 @@ OceanBase Database in Oracle mode is compatible with the transaction control sta
    obclient [SYS]> COMMIT;
    ```
 
-   > **Notice**
-   >
-   > `BEGIN` is the alias of `START TRANSACTION` and is used to start a transaction. 
+   <main id="notice" type='notice'>
+    <h4>Notice</h4>
+    <p><code>BEGIN</code> is the alias of <code>START TRANSACTION</code> and is used to start a transaction.</p>
+   </main>
 
 * When `autocommit` is set to `0` to disable the autocommit mode, execute the `INSERT`, `UPDATE`, `DELETE`, or `SELECT FOR UPDATE` statement to start a new transaction. 
 
@@ -111,7 +112,7 @@ For more information about fields in the `$OB_TRANSACTION_PARTICIPANTS` view, se
 
 ## Related topics
 
-* [Transaction savepoints](3.transaction-savepoints-of-oracle-mode/1.mark-a-savepoint-of-oracle-mode.md)
+* [Mark a savepoint](3.transaction-savepoints-of-oracle-mode/1.mark-a-savepoint-of-oracle-mode.md)
 
 * [Commit a transaction](4.submit-transaction-of-oracle-mode.md)
 
