--- a/en-US/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/5.roll-back-transactions-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/5.roll-back-transactions-of-oracle-mode.md
@@ -74,7 +74,7 @@ In this example, `BEGIN` is used to start a transaction. Before `COMMIT` is used
 
 ## Roll back a transaction to a savepoint
 
-If savepoints are set for a transaction, you can use the `ROLLBACK TO SAVEPOINT` statement to roll back the transaction to a savepoint. For more information about transaction savepoints, see [Transaction savepoints](3.transaction-savepoints-of-oracle-mode/1.mark-a-savepoint-of-oracle-mode.md). 
+If savepoints are set for a transaction, you can use the `ROLLBACK TO SAVEPOINT` statement to roll back the transaction to a savepoint. For more information about transaction savepoints, see [Mark a savepoint](3.transaction-savepoints-of-oracle-mode/1.mark-a-savepoint-of-oracle-mode.md). 
 
 After you roll back a transaction to a savepoint:
 
@@ -100,4 +100,4 @@ For more information about how to roll back a transaction to a savepoint, see [R
 
 * [Commit a transaction](4.submit-transaction-of-oracle-mode.md)
 
-* [Transaction savepoints](3.transaction-savepoints-of-oracle-mode/1.mark-a-savepoint-of-oracle-mode.md)
+* [Mark a savepoint](3.transaction-savepoints-of-oracle-mode/1.mark-a-savepoint-of-oracle-mode.md)
