--- a/en-US/3.develop/2.application-development-of-oracle-mode/6.common-errors-and-solutions-of-oracle-mode/2.transaction-idle-timeout-with-error-code-ora-24761-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/6.common-errors-and-solutions-of-oracle-mode/2.transaction-idle-timeout-with-error-code-ora-24761-of-oracle-mode.md
@@ -35,15 +35,16 @@ The error codes corresponding to this error message are as follows:
 
 * SQLSTATE: 25000
 
-For more information about the error codes, see [Overview](../../../7.reference/5.system-reference/7.error-code-of-oracle-mode/1.use-error-information-of-oracle-mode.md). 
+For more information about the error codes, see [Error code overview](../../../7.reference/5.system-reference/7.error-code-of-oracle-mode/1.use-error-information-of-oracle-mode.md). 
 
 ## Possible causes
 
 The transaction idle time, namely the execution interval between two consecutive statements, has exceeded the specified threshold. When the transaction idle time exceeds the specified threshold, the system reports an error if you perform a database operation. The idle transaction timeout period is controlled by the `ob_trx_idle_timeout` tenant variable. The default value is 86400000000 microseconds, namely 24 hours. 
 
-> **Note**
->
-> OceanBase Database provides two timeout mechanisms to prevent transactions from holding locks for a long time and affecting other sessions: idle transaction timeout and uncommitted transaction timeout. Typically, only one timeout mechanism is triggered at a time. 
+  <main id="notice" type='explain'>
+    <h4>Note</h4>
+    <p>OceanBase Database provides two timeout mechanisms to prevent transactions from holding locks for a long time and affecting other sessions: idle transaction timeout and uncommitted transaction timeout. Typically, only one timeout mechanism is triggered at a time. </p>
+  </main>
 
 ## Troubleshooting procedure
 
@@ -53,9 +54,10 @@ Take the following steps to view and modify tenant variables, roll back the tran
 
    The idle transaction timeout period is controlled by the `ob_trx_idle_timeout` tenant variable in the unit of microseconds. We recommend that you use the default value of 86400000000 microseconds, namely 24 hours. 
 
-   > **Note**
-   >
-   > The following variable setting method takes effect only for the current session. To make the settings permanent, use the `SET GLOBAL` syntax to configure these variables, and then restart the session for the settings to take effect. 
+   <main id="notice" type='explain'>
+    <h4>Note</h4>
+    <p>The following variable setting method takes effect only for the current session. To make the settings permanent, use the <code>SET GLOBAL</code> syntax to configure these variables, and then restart the session for the settings to take effect. </p>
+   </main>
 
    ```sql
    obclient [SYS]> SHOW VARIABLES LIKE 'ob_trx_idle_timeout';
