--- a/en-US/3.develop/2.application-development-of-oracle-mode/6.common-errors-and-solutions-of-oracle-mode/6.table-already-exists-with-error-code-ora-00955-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/6.common-errors-and-solutions-of-oracle-mode/6.table-already-exists-with-error-code-ora-00955-of-oracle-mode.md
@@ -28,7 +28,7 @@ The error codes corresponding to this error message are as follows:
 
 * SQLSTATE: HY000
 
-For more information about the error codes, see [Overview](../../../7.reference/5.system-reference/7.error-code-of-oracle-mode/1.use-error-information-of-oracle-mode.md). 
+For more information about the error codes, see [Error code overview](../../../7.reference/5.system-reference/7.error-code-of-oracle-mode/1.use-error-information-of-oracle-mode.md). 
 
 ## Possible causes
 
@@ -66,7 +66,8 @@ Take the following steps to check whether a table already exists, rename the exi
    Query OK, 0 rows affected
    ```
 
-   > **Note**
-   >
-   > If the table is no longer needed, execute the `DROP TABLE` statement to drop the table so that you can then create a new one. 
+   <main id="notice" type='explain'>
+    <h4>Note</h4>
+    <p>If the table is no longer needed, execute the <code>DROP TABLE</code> statement to drop the table so that you can then create a new one.</p>
+   </main>
 
