--- a/en-US/3.develop/2.application-development-of-oracle-mode/6.common-errors-and-solutions-of-oracle-mode/7.table-does-not-exists-with-error-code-ora-04043-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/6.common-errors-and-solutions-of-oracle-mode/7.table-does-not-exists-with-error-code-ora-04043-of-oracle-mode.md
@@ -19,7 +19,7 @@ The error codes corresponding to this error message are as follows:
 
 * SQLSTATE: HY000
 
-For more information about the error codes, see [Overview](../../../7.reference/5.system-reference/7.error-code-of-oracle-mode/1.use-error-information-of-oracle-mode.md). 
+For more information about the error codes, see [Error code overview](../../../7.reference/5.system-reference/7.error-code-of-oracle-mode/1.use-error-information-of-oracle-mode.md). 
 
 ## Possible causes
 
