--- a/en-US/3.develop/2.application-development-of-oracle-mode/6.common-errors-and-solutions-of-oracle-mode/8.unique-key-conflict-with-error-code-ora-00001-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/6.common-errors-and-solutions-of-oracle-mode/8.unique-key-conflict-with-error-code-ora-00001-of-oracle-mode.md
@@ -19,7 +19,7 @@ The error codes corresponding to this error message are as follows:
 
 * SQLSTATE: 23000
 
-For more information about the error codes, see [Overview](../../../7.reference/5.system-reference/7.error-code-of-oracle-mode/1.use-error-information-of-oracle-mode.md). 
+For more information about the error codes, see [Error code overview](../../../7.reference/5.system-reference/7.error-code-of-oracle-mode/1.use-error-information-of-oracle-mode.md). 
 
 ## Possible causes
 
@@ -51,10 +51,13 @@ You can take either of the following two methods to solve the conflict.
    Query OK, 1 row affected
    ```
 
-   > **Note**
-   >
-   > * You can also use the `MERGE INTO` statement to avoid unique key conflicts. For more information, see [Replace data](../../1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/4.replace-data.md). 
-   > * If you confirm that the existing row is not needed, you can delete it. For more information, see [Delete data](../../1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/3.delete-data.md). 
+   <main id="notice" type='explain'>
+    <h4>Note</h4>
+    <ul>
+    <li>You can also use the <code>MERGE INTO</code> statement to avoid unique key conflicts. For more information, see <a href="../3.write-data-of-oracle-mode/4.replace-data-of-oracle-mode.md">Replace data</a>.</li>
+    <li>If you confirm that the existing row is not needed, you can delete it. For more information, see <a href="../3.write-data-of-oracle-mode/3.delete-data-of-oracle-mode.md">Delete data</a>.</li>
+    </ul>
+   </main>
 
 3. After successful deletion, view the data in the `t_insert` table again. 
 
