--- a/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/2.deploy-the-quorum-high-availability-service.md
+++ b/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/2.deploy-the-quorum-high-availability-service.md
@@ -475,6 +475,6 @@ Query OK, 0 rows affected
 * [CREATE TENANT](../../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/8.create-tenant.md)
 * [开启仲裁服务](../../../../6.manage/4.high-availability/4.arbitration-high-availability/2.enable-the-arbitration-service.md)
 * [关闭仲裁服务](../../../../6.manage/4.high-availability/4.arbitration-high-availability/3.disable-the-arbitration-service.md)
-* [修改降级超时时间](../../../../6.manage/4.high-availability/4.arbitration-high-availability/4.modify-the-degradation-timeout.md)
+* [修改降级触发的控制时间](../../../../6.manage/4.high-availability/4.arbitration-high-availability/4.modify-the-degradation-timeout.md)
 * [替换仲裁服务](../../../../6.manage/4.high-availability/4.arbitration-high-availability/5.replace-the-arbitration-service.md)
 * [删除仲裁服务](../../../../6.manage/4.high-availability/4.arbitration-high-availability/6.remove-the-arbitration-service.md)
