--- a/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/3.disable-the-arbitration-service.md
+++ b/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/3.disable-the-arbitration-service.md
@@ -111,7 +111,7 @@
 
 * [开启仲裁服务](2.enable-the-arbitration-service.md)
 
-* [修改降级超时时间](4.modify-the-degradation-timeout.md)
+* [修改降级触发的控制时间](4.modify-the-degradation-timeout.md)
 
 * [替换仲裁服务](5.replace-the-arbitration-service.md)
 
