--- a/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/4.modify-the-degradation-timeout.md
+++ b/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/4.modify-the-degradation-timeout.md
@@ -1,6 +1,6 @@
-# 修改降级超时时间
+# 修改降级触发的控制时间
 
-使用租户级的仲裁服务时，需要配置降级超时时间。当半数 F 副本故障导致日志同步失败并且达到降级超时时间时，仲裁服务会自动执行降级流程来恢复服务。自动降级的超时时间默认为 5s，该值也表示在出现机房故障时服务中断的时间。
+使用租户级的仲裁服务时，需要配置降级触发的控制时间。当半数 F 副本故障导致日志同步失败并且达到降级触发的控制时间时，仲裁服务会自动执行降级流程来恢复服务。自动降级的控制时间默认为 5s，该值也表示在出现机房故障时服务中断的时间。
 
 ## 操作步骤
 
@@ -14,7 +14,7 @@
 
    有关更加详细的连接数据库的操作指引，参见 [连接数据库概述（MySQL 模式）](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md) 和 [连接数据库概述（Oracle 模式）](../../../3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
 
-2. 查看租户仲裁服务的降级超时时间。
+2. 查看租户仲裁服务的降级触发控制时间。
 
    ```sql
    obclient [(none)]> SHOW PARAMETERS LIKE 'arbitration_timeout';
@@ -34,23 +34,23 @@
    1 row in set
    ```
 
-3. 根据使用场景，选择合适的语句修改降级超时时间。
+3. 根据使用场景，选择合适的语句修改降级触发的控制时间。
 
    租户级配置项 `arbitration_timeout` 用于控制触发自动降级的超时时间。其默认值为 5s，取值范围为 [3s, +∞)。如果不希望发生降级（类似于 OceanBase V3.X 版本的主备库中备库的最大保护模式），可以设置一个足够大的值，例如 30d（30 天）。该配置项配置后实时生效，不需要重启 OBServer 节点。
 
-   * 用户租户修改本租户的降级超时时间
+   * 用户租户修改本租户的降级触发控制时间
 
      ```sql
      ALTER SYSTEM SET arbitration_timeout = '10s';
      ```
 
-   * `sys` 租户修改指定租户的降级超时时间
+   * `sys` 租户修改指定租户的降级触发控制时间
 
      ```sql
      ALTER SYSTEM SET arbitration_timeout = '10s' TENANT = 'tenant_name';
      ```
 
-   * `sys` 租户修改所有租户的降级超时时间
+   * `sys` 租户修改所有租户的降级触发控制时间
 
      ```sql
      ALTER SYSTEM SET arbitration_timeout = '10s' TENANT = all;
