--- a/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/5.replace-the-arbitration-service.md
+++ b/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/5.replace-the-arbitration-service.md
@@ -57,6 +57,6 @@
 
 * [关闭仲裁服务](3.disable-the-arbitration-service.md)
 
-* [修改降级超时时间](4.modify-the-degradation-timeout.md)
+* [修改降级触发的控制时间](4.modify-the-degradation-timeout.md)
 
 * [删除仲裁服务](6.remove-the-arbitration-service.md)
