--- a/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/6.remove-the-arbitration-service.md
+++ b/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/6.remove-the-arbitration-service.md
@@ -51,6 +51,6 @@
 
 * [关闭仲裁服务](3.disable-the-arbitration-service.md)
 
-* [修改降级超时时间](4.modify-the-degradation-timeout.md)
+* [修改降级触发的控制时间](4.modify-the-degradation-timeout.md)
 
 * [替换仲裁服务](5.replace-the-arbitration-service.md)
